@@ -1,4 +1,4 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.37.1.
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.36.
 .TH GOOGLE "1" "June 2010" "google 0.9.7" "User Commands"
 .SH NAME
 google \- command-line access to (some) Google services
@@ -91,7 +91,7 @@ Requires: delimiter Optional: title, folder
 .IP
 upload: Upload a document
 .IP
-Requires: none Optional: title, folder, no\-convert Arguments: PATH_TO_FILE
+Requires: none Optional: title, folder, format Arguments: PATH_TO_FILE
 .IP
 get: Download a document
 .IP
